 * Support for timeout in UDP input --udp-timeout=<seconds>
 * New SAT>IP access module, to receive DVB-S via IP networks

Decoder:
 * OMX GPU-zerocopy support for decoding and display on Android using OpenMax IL
 * Support 4:4:4 and 4:2:2 chroma samplings with VDPAU hw acceleration
 * Support for ARIB STD-B24 subtitles
 * Support for Daala video
 * Important improvements for the MMAL decoder and output for rPI and rPI2
 * Support HEVC hardware decoding using OMX and MediaCodec
 * Use MediaCodec via NDK native API after Android Lollipop
 * Support VP9 and WMV3 decoding using OMX and performance improvements
 * New MPEG-1 & 2 audio layer I, II, III + MPEG 2.5 decoder based on libmpg123
 * New BPG decoder based on libbpg
 * Fixed uncompressed DVD-Audio (AOB) LPCM decoding
 * Rewrite WPL playlists and add ZPL playlists support (Zune)
 * Support TDSC, Canopus HQX
 * Support HEVC hardware decoding on Windows, using DxVA2
 * Basic TTML subtitles support
 * Support hardware decoding using Direct3D11, including GPU-zerocopy mode
 * DxVA2 GPU-zerocopy for hardware decoding and displaying on Windows
 * Support 9-bit and 10-bit GBR planar formats
 * New hardware accelerated decoder for OS X and and iOS based on Video Toolbox
   supporting H.263, H.264/MPEG-4 AVC, MPEG-4 Part 2, and DV depending on device
   and OS version
 * Support for the OggSpots video codec
 * JPEG images correctly oriented using embedded orientation tag, if present

Demuxers:
 * Support HD-DVD .evo (H.264, VC-1, MPEG-2, PCM, AC-3, E-AC3, MLP, DTS)
 * Support Opus in MPEG Transport Stream
 * Support Daala in Ogg
 * Important rework of the MP4 demuxer, including fragments
 * Support EIA-608 subtitles in MP4/mov
 * Support SBV subtitles
 * Support WMV and WMAV in MP4/mov, aka Flip4Mac files
 * Support bitmap audio channel reordering in MP4/mov
 * Support AlbumArtist and DiscNumber metadata
 * Important rework of the TS demuxer, including: